[gd_scene load_steps=13 format=2]

[ext_resource path="res://miniGames/Collect_money/Coin/coin_2.png" type="Texture" id=1]
[ext_resource path="res://miniGames/Collect_money/Coin/coin_4.png" type="Texture" id=2]
[ext_resource path="res://miniGames/Collect_money/Coin/coin_1.png" type="Texture" id=3]
[ext_resource path="res://miniGames/Collect_money/Coin/coin_3.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Schr√∂dinger.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/textures/player.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/floor.png" type="Texture" id=7]
[ext_resource path="res://miniGames/Collect_money/Menu_Collect_Money.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 5 )

[node name="Menu_Collect_Money" type="Node2D"]
script = ExtResource( 8 )

[node name="coins" type="Node" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="coins"]
position = Vector2( 328, 200 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="coins"]
position = Vector2( 480, 200 )
frames = SubResource( 2 )
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="coins"]
position = Vector2( 624, 200 )
frames = SubResource( 2 )
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="coins"]
position = Vector2( 744, 200 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="Label" type="Label" parent="."]
margin_left = 208.0
margin_top = -16.0
margin_right = 876.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 1 )
text = "WELCOME TO COLLECT MONEY "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="MenuButton" parent="."]
margin_left = 670.0
margin_top = 288.0
margin_right = 846.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 3 )
text = "EXIT"
icon = ExtResource( 6 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="MenuButton" parent="."]
margin_left = 264.0
margin_top = 288.0
margin_right = 440.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 3 )
text = "START"
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 120.0
margin_top = 456.0
margin_right = 1008.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 4 )
text = "INSTRUCIONES: 
- MUEVE EL PERSONAJE HACIA LA IZQUIERDA O DERECHA Y RECOLECTA LAS MONEDAS.
- ADVERTENCIA: LAS MONEDAS PUEDEN HACER PERDER DINERO"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
